--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,180 @@
-.App {
+/* RESET */
+* {
+  padding: 0;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  box-sizing: border-box;
+}
+
+/* HEADER */
+header {
+  text-align: center;
+  padding: 20px;
+  background-color: #407294;
+  color: #f4f4f4f4;
+}
+
+nav {
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+}
+
+.nav-links {
+  text-decoration: none;
+  margin: 0 10px 0 10px;
+  color: #f4f4f4f4;
+}
+
+.logout-btn {
+  background-color: #407294;
+  color: #f4f4f4f4;
+  border: none;
+  font-size: 16px;
+  margin: 0 10px 0 10px;
+}
+
+.fa-user {
+  margin-right: 4px;
+}
+
+/* MAIN */
+.card-container {
+  border: 1px solid black;
+  margin: 20px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.card-link {
+  text-decoration: none;
+  color: #333333;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.card-title {
+  font-size: 20px;
+  font-weight: bold;
+  margin: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.card-author {
+  font-style: italic;
+  margin: 20px;
+}
+
+.card-date {
+  font-size: 14px;
+  margin: 20px;
+}
+
+/* SESSION FORMS */
+.session-form {
+  margin: 15px;
+}
+
+.session-form h2 {
+  text-align: center;
+}
+
+.session-form fieldset {
+  border: none;
+  margin-top: 15px;
+}
+
+.session-form-input {
+  width: 100%;
+  font-size: 16px;
+  padding: 5px;
+  margin: 10px 0;
+}
+
+.form-textarea {
+  resize: none;
+  width: 100%;
+  height: 100px;
+  font-size: 16px;
+  padding: 10px;
+  margin: 10px 0;
+}
+
+.session-form-submit {
+  background-color: #407294;
+  color: #f4f4f4f4;
+  padding: 10px;
+  border: none;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.cancel-btn {
+  border: 1px solid black;
+  padding: 10px;
+  color: #333333;
+  text-decoration: none;
+  margin-left: 10px;
+}
+
+/* POST */
+.post-container {
+  margin: 10px;
+}
+
+.post-container h2 {
+  margin-bottom: 10px;
+}
+
+.post-author-date {
+  font-style: italic;
+  margin-bottom: 10px;
+}
+
+.post-content {
+  margin: 20px 0;
+}
+
+.post-container h3 {
+  margin-bottom: 10px;
+}
+
+.comment-form {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.comment-textarea {
+  resize: none;
+  width: 70%;
+  padding: 10px;
+  font-size: 16px;
+  height: 40px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.comment-submit {
+  background-color: #407294;
+  color: #f4f4f4f4;
+  border: none;
+  padding: 11px;
+  margin-left: 5px;
+  font-size: 16px;
+}
+
+.no-comments {
+  margin: 20px 0;
+  text-align: center;
+  color: grey;
+}
+
+.comment {
+  margin: 20px 0;
+  border: 1px solid grey;
+  padding: 5px;
+}
+
+.comment-date {
+  margin-left: 5px;
+}
+
+.comment-author-date {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 5px;
 }
