--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,6 +6,33 @@
   box-sizing: border-box;
 }
 
+#root {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+/* NOT FOUND */
+.not-found {
+  text-align: center;
+  margin: 80px 0;
+}
+
+.four-o-four {
+  font-weight: bold;
+  font-size: 90px;
+  color: grey;
+}
+
+.not-found-text-1 {
+  font-size: 30px;
+  color: grey;
+}
+
+.not-found-text-2 {
+  color: grey;
+}
+
 /* HEADER */
 header {
   text-align: center;
@@ -26,6 +53,11 @@ nav {
   color: #f4f4f4f4;
 }
 
+.logo {
+  text-decoration: none;
+  color: #f4f4f4f4;
+}
+
 .logout-btn {
   background-color: #407294;
   color: #f4f4f4f4;
@@ -37,14 +69,15 @@ nav {
 
 .fa-user {
   margin-right: 4px;
-  text-decoration: none;
 }
 
 /* MAIN */
 .card-container {
-  border: 1px solid black;
+  /* border: 1px solid black; */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
   margin: 20px;
   text-align: center;
+  padding: 10px;
 }
 
 .card-link {
@@ -66,6 +99,13 @@ nav {
 .card-date {
   font-size: 14px;
   margin: 20px;
+}
+
+.no-post-message {
+  margin: 80px 0;
+  width: 100%;
+  text-align: center;
+  color: grey;
 }
 
 /* SESSION FORMS */
@@ -126,7 +166,7 @@ nav {
 
 /* POST */
 .post-container {
-  margin: 10px;
+  margin: 40px;
 }
 
 .post-container h2 {
@@ -222,6 +262,18 @@ nav {
 .date-close-container {
   display: flex;
   align-items: center;
+}
+
+.footer {
+  text-align: center;
+  margin-top: auto;
+  width: 100%;
+  padding: 20px;
+}
+
+.footer a {
+  text-decoration: none;
+  color: #333333;
 }
 
 @media only screen and (min-width: 688px) {
