--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,6 +6,12 @@
   box-sizing: border-box;
 }
 
+input {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
 #root {
   display: flex;
   flex-direction: column;
